Deployment with cert-manager/00-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: your-app
spec:
  selector:
    matchLabels:
      name: your-app
  template:
    metadata:
      name: your-app
      labels:
        name: your-app
    spec:
      containers:
        - name: your-app
          image: your-images/public-image
          imagePullPolicy: Never
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 500m
            requests:
              cpu: 200m
          resources:
            limits:
              memory: 4096Mi
            requests:
              memory: 2046Mi
---

apiVersion: v1
kind: Service
metadata:
  name: your-service
spec:
  type: LoadBalancer
  selector:
    name: your-app
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30001
