Deployment with cert-manager/01-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: web-ingress
spec:
  rules:
  - host: your.domains.com
    http:
      paths:
      - backend:
          serviceName: your-service
          servicePort: 80
