Deployment with cert-manager/03-cert.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  tls:
  - host: your.domains.com
  - secretName: your-secret
  rules:
  - host: your.domains.com
    http:
      paths:
      - backend:
          serviceName: gmx-service
          servicePort: 80
